<resources>
    <string name="app_name">HK Home</string>

    <!-- Main Page -->
    <string name="ma_crop_ver1_button">Start Crop Algorithm Version 1</string>
    <string name="ma_crop_ver2_button">Start Crop Algorithm Version 2</string>
    <string name="ma_info_text">Click on button below to start cropping image.</string>

    <!-- Crop Page -->
    <string name="cp_info_text">Resize/Orient Image to Fit Face Inside the Orange Circle</string>
    <string name="cp_image_contentDesc">Image</string>
    <string name="cp_template_contentDesc">Template</string>
    <string name="cp_change_img_contentDesc">Change Image</string>
    <string name="cp_crop_button">Crop Image</string>
    <string name="cp_template_button">Change Template</string>

    <!-- Select Dialog -->
    <string name="sd_select_template_text">Select Template</string>
    <string name="sd_icon_contentDesc">Template Icons</string>

    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="exposure">Exposure</string>
    <string name="sharpness">Sharpness</string>
    <string name="saturation">Saturation</string>

    <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>

    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>
</resources>
